@@ -9,6 +9,7 @@ Date: 2023-03-27
     - Tweak silver wire icon
     - Tweak electronic circuit recipe icons
     - When used with Bob's electronics, provide alternate basic electronic components recipe
+    - When used with AAI Industry (and not Natural Gas) provide alt-alt electronic circuit recipe
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.8
 Date: 2023-03-27
